--- a/theme/modules/stats-simple-grid.module/module.html
+++ b/theme/modules/stats-simple-grid.module/module.html
@@ -8,12 +8,12 @@
   {% set grid_col_class = 'lg:grid-cols-4' %}
 {% endif %}
 
-<div class="not-prose grid grid-cols-1 gap-1 text-balance {{ 'sm:grid-cols-2' if cols >= 2 }} {{ grid_col_class }}">
+<div class="not-prose w-full max-w-[1140px] grid grid-cols-1 text-balance gap-4 lg:gap-0 mx-auto {{ 'sm:grid-cols-2' if cols >= 2 }} {{ grid_col_class }}">
   {% for item in module.stats_list %}
-    <div class="grid bg-gray-100 place-items-center text-center p-2">
-      <p class="text-3xl font-semibold tracking-tight">{{ item.title }}</p>
+    <div class="grid place-items-center text-center gap-2 p-2 {{ 'lg:gradient-border-right' if (cols >= 2 and not loop.last) }}">
+      <p class="!font-bold text-turquoise !text-6xl">{{ item.number }}<span class="font-normal !text-3xl">{{ item.unit }}</span></p>
 
-      <p class="text-sm">{{ item.subtext }}</p>
+      <p class="!font-bold text-lg text-center max-w-[170px] !text-off-white/70">{{ item.subtext }}</p>
     </div>
   {% endfor %}
 </div>
