--- a/theme/modules/hero-content.module/module.html
+++ b/theme/modules/hero-content.module/module.html
@@ -13,12 +13,12 @@
     {% endif %}
 
     <!-- Hero content -->
-    <div class='relative z-10 flex flex-col items-center justify-center h-full gap-6 text-center p-10 home-hero'>
-        <h1 class='flex flex-col !text-7xl !text-white !font-black'>
+    <div class='relative z-10 flex flex-col items-center justify-center h-full gap-6 text-center p-4 sm:p-10 home-hero'>
+        <h1 class='flex flex-col !text-5xl sm:!text-6xl md:!text-7xl !text-white !font-black'>
             <span>{{ module.headline_top }}</span>
             <span class='text-water'>{{ module.headline_bottom }}</span>
         </h1>
-        <p class='text-2xl text-white max-w-[630px] font-light'>
+        <p class='text-xl sm:text-2xl text-white max-w-[630px] font-light'>
             {{ module.subtext }}
         </p>
         <a href='{{ module.button_url }}'
